--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,5 +14,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+<Button
+    android:layout_width="368dp"
+    android:layout_height="0dp"
+    android:text="data data"
+    tools:layout_editor_absoluteY="0dp"
+    tools:layout_editor_absoluteX="8dp" />
 </android.support.constraint.ConstraintLayout>
